--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ __pycache__/
 .envrc
 
 # VSCode
-.vscode/
 **_cache/
 # Jupyter
 .ipynb_checkpoints/
@@ -23,7 +22,7 @@ src/output/**
 .ruff_cache/
 .pytest_cache/
 .cache/
-
+src/datasets/raw/
 # OS
 .DS_Store
 Thumbs.db
