--- a/src/experiments/acq_yaml/experiment.yaml
+++ b/src/experiments/acq_yaml/experiment.yaml
@@ -2,7 +2,7 @@ name: acq_yaml
 description: "Structured acquisition extraction (YAML defined)"
 model: gpt-4o-mini
 provider: azure
-schema_model: app.schemas.extraction.AcquisitionExtraction
+schema_model: experiments.acq_yaml.schemas.extraction.AcquisitionExtraction
 system_prompt: prompts/system/extraction.txt
 user_prompt: prompts/user/extraction.jinja
 instructions:
